Organize the src folder

--- a/src/style.scss
+++ b/src/style.scss
@@ -11,7 +11,7 @@ $orange: orange;
 }
 
 body {
-    background-image: url("./restaurant-bg.jpg");
+    background-image: url("./imgs/restaurant-bg.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -104,19 +104,19 @@ footer {
             }
         }
         #twitter {
-            background-image: url("./twitter.svg");
+            background-image: url("./imgs/twitter.svg");
             background-size: 22px;
             background-repeat: no-repeat;
             background-position: center;
         }
         #linkedin {
-            background-image: url("./linkedin.svg");
+            background-image: url("./imgs/linkedin.svg");
             background-size: 20px;
             background-repeat: no-repeat;
             background-position: center;
         }
         #github {
-            background-image: url("./github.svg");
+            background-image: url("./imgs/github.svg");
             background-size: 20px;
             background-repeat: no-repeat;
             background-position: center;
